# qcm_parser

./: .gitignore  README.md  qcm_parser.py  readme.md  setup.cfg  setup.py
example/: example.md
examples/: test.md  test_QUESTIONS.md
src/qcm_parser/: parser.py  string_parsers.py
tests/: test_parser.py
