[metadata]
name = qcm_parser
version = 0.0.1
author = qkzk
author_email = qu3nt1n@gmail.com
description = A parser of QCM file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qkzk/qcm_parser 
project_urls =
    Bug Tracker = https://github.com/qkzk/qcm_parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU PUBLIC LICENSE
    OPERATING SYSTEM :: OS INDEPENDENT

[OPTIONS]
PACKAGE_DIR =
    = SRC
PACKAGES = FIND:
PYTHON_REQUIRES = >=3.6

[OPTIONS.PACKAGES.FIND]
WHERE = SRC
